Fix paddings and margins, some other reworks

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,7 @@
-html, body, #root, .App {
+html,
+body,
+#root,
+.App {
   height: 100%;
 }
 .App {
@@ -7,7 +10,7 @@ html, body, #root, .App {
 }
 /* Add background color to the body */
 body {
-  background-color: rgba(68, 70, 84, 1.0);
+  background-color: rgba(68, 70, 84, 1);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -35,15 +38,28 @@ body {
   justify-content: space-between;
   padding: 10px;
   background-color: rgba(64, 65, 79, 1);
-  border-color: rgba(32,33,35,.5);
+  border-color: rgba(32, 33, 35, 0.5);
   border-radius: 5px;
   margin: 10px 200px;
 }
 
+@media screen and (max-width: 998px) {
+  #input-container {
+    margin: 10px 50px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #input-container {
+    margin: 10px 30px;
+  }
+}
 
 /* Remove background color and add an SVG background for the submit button */
 #submit-button {
-  background: transparent url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'><path fill='white' d='M2.01 21L23 12 2.01 3 2 10l15 2-15 2z'/></svg>") no-repeat center center;
+  background: transparent
+    url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'><path fill='white' d='M2.01 21L23 12 2.01 3 2 10l15 2-15 2z'/></svg>")
+    no-repeat center center;
   color: white;
   width: 40px;
   height: 40px;
@@ -62,7 +78,7 @@ body {
 #regenerate-response-button {
   color: white;
   border: none;
-  background: #10A37F;
+  background: #10a37f;
   border-radius: 4px;
   padding: 10px 20px;
   cursor: pointer;
@@ -87,9 +103,9 @@ body {
 }
 
 #model-select-container select option:not(:checked) {
-  background: rgba(32,33,35,.8);
+  background: rgba(32, 33, 35, 0.8);
 }
 
 #model-select-container select option {
-  background: rgba(32,33,35,.5);
+  background: rgba(32, 33, 35, 0.5);
 }
