--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,6 +3,10 @@ body,
 #root,
 .App {
   height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+pre {
+  font-family: Arial, Helvetica, sans-serif;
 }
 .App {
   display: flex;
